--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
-    background-color: rgb(50,50,50);
-    color: white;
+    background-color: white;;
+    color: black;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -21,12 +21,19 @@ body{
     color: rgb(255,100,100)
 }
 
+.last-edited{
+    padding-left: 10px;
+    color: darkgrey;
+    font-style: italic;
+    font-size: 12pt;
+}
+
 #note-body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
 a,a:visited{
-    color: white;
+    color: black;
     font-weight: bold;
     text-decoration: none;
 }
